--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,8 +65,11 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=edge
+          cache-to: type=gha,mode=max,scope=edge
+          provenance: false
+          build-args: |
+            PIP_ONLY_BINARY=:all:
 
   # Release jobs for tag pushes only
   create-release:
