--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,6 +6,8 @@ pytest>=7.4.0
 pytest-asyncio>=0.21.0
 pytest-cov>=4.1.0
 pytest-mock>=3.12.0
+watchfiles>=0.21.0
+psutil>=5.9.8
 
 # Code formatting
 black>=23.9.0
