feat(config,allocation): support -1 unlimited per-tracker; add tests and docs\n\n- Allow -1 for TrackerConfig.max_upload_speed (unlimited)\n- Allocation sets per-torrent limit to -1 for unlimited trackers\n- Tests for catch-all unlimited, cap removal, precedence, overlapping patterns\n- README and config examples document unlimited and matching precedence

--- a/config/qguardarr.yaml.example
+++ b/config/qguardarr.yaml.example
@@ -59,7 +59,7 @@ trackers:
   - id: "default"
     name: "All Others"
     pattern: ".*"  # Matches everything - must be the last entry
-    max_upload_speed: 2097152  # 2 MB/s
+    max_upload_speed: 2097152  # 2 MB/s (-1 for unlimited/no cap)
     priority: 1
 
 # Rollback system settings
