feat(allocation): add ActivityScorer, selection API and weighted per-tracker allocator; integrate strategy switch (Phase 2 opt-in)

--- a/config/qguardarr.yaml
+++ b/config/qguardarr.yaml
@@ -71,7 +71,7 @@ trackers:
   - id: "default"
     name: "Default Trackers"
     pattern: ".*"  # Catch-all (must be last)
-    max_upload_speed: 1048576  # 1 MB/s (-1 for unlimited/no cap)
+    max_upload_speed: 1048576  # 1 MB/s
     priority: 1
 
 # Rollback settings
