--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - ./config:/app/config:ro
       - ./data:/app/data
       - ./logs:/app/logs
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     environment:
       # qBittorrent connection
       # On Mac/Windows: use host.docker.internal instead of localhost
