--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   qguardarr:
-    build: .
+    image: ghcr.io/mrinvincible29/qguardarr:latest
     container_name: qguardarr
     ports:
       - "8089:8089"
