chore(types): fix mypy handler typing in logging setup; docs(env): add APP_PORT to .env.example; chore(docker): remove mem_limit from compose

--- a/.env.example
+++ b/.env.example
@@ -14,11 +14,9 @@ QBIT_PASSWORD=your_password_here
 CROSS_SEED_URL=http://host.docker.internal:2468/api/webhook
 CROSS_SEED_API_KEY=your_api_key_here
 
-# Application settings (optional - defaults will be used if not set)
-# GLOBAL_UPDATE_INTERVAL=300
-# GLOBAL_ROLLOUT_PERCENTAGE=10
-# GLOBAL_HOST=0.0.0.0
-# GLOBAL_PORT=8089
+# Application settings
+# Port the app listens on (container + healthcheck)
+APP_PORT=8089
 
 # Logging settings (optional)
 # LOG_LEVEL=INFO
