--- a/config/qguardarr.yaml.example
+++ b/config/qguardarr.yaml.example
@@ -15,7 +15,8 @@ global:
   
   # Server settings
   host: "0.0.0.0"
-  port: 8089
+  # Bind port (reads from environment APP_PORT to align with Compose)
+  port: ${APP_PORT}
 
   # Allocation strategy
   # - 'equal'    : equal split within tracker (Phase 1)
